--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.8",
+    "axios": "0.21.1",
     "mobx": "6.0.4",
     "mobx-react-lite": "3.1.6",
     "react": "^17.0.1",
